--- a/album.css
+++ b/album.css
@@ -6,7 +6,8 @@
   padding-top: var(--jumbotron-padding-y);
   padding-bottom: var(--jumbotron-padding-y);
   margin-bottom: 0;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
+  background-image: url(imagens/Florianopolis1.jpg);
 }
 @media (min-width: 768px) {
   .jumbotron {
